Fix scrollbar in my cart page

--- a/final_proj/src/Cart.scss
+++ b/final_proj/src/Cart.scss
@@ -44,6 +44,21 @@ $border-rad10: 10px;
     top: 270px;
 }
 
+.allCarts {
+    overflow: hidden;
+	overflow-y: scroll;
+    width: 100%;
+    height: 500px;
+    margin-bottom: 20%;
+    left: 3%;
+    position: relative;
+}
+
+.footer {
+    position: absolute;
+    top: 40%;
+    left: 5%;
+}
 .titlebar {
     position: absolute;
     font-family: $main-font;
@@ -55,7 +70,7 @@ $border-rad10: 10px;
 
     & p {
         display: inline;
-        color: $dirty-$white;
+        color: $dirty-white;
         text-align: center;
         padding: 230px;
         text-decoration: none;
@@ -134,12 +149,31 @@ $border-rad10: 10px;
     }
 }
 
-.cart-items {
+.cart-items1 {
     position: absolute;
     width: 612px;
     height: 176px;
     top: 90px;
     text-align: center;
+    margin-bottom: 5%;
+}
+
+.cart-items2 {
+    position: absolute;
+    width: 612px;
+    height: 176px;
+    top:250px;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+.cart-items3{
+    position: absolute;
+    width: 612px;
+    height: 176px;
+    top:413px;
+    text-align: center;
+    margin-bottom: 5%;
 }
 
 .prod {
